@@ -26,17 +26,23 @@
     	<artifactId>spring-boot-starter-web</artifactId>
     	<version>${spring.boot.version}</version>
     	<exclusions>
-<!--     		<exclusion> -->
-<!--     			<artifactId>spring-boot-starter-tomcat</artifactId> -->
-<!--     			<groupId>org.springframework.boot</groupId> -->
-<!--     		</exclusion> -->
+    		<exclusion>
+    			<artifactId>spring-boot-starter-tomcat</artifactId>
+    			<groupId>org.springframework.boot</groupId>
+    		</exclusion>
     	</exclusions>
     </dependency>
-<!--     <dependency> -->
-<!--     	<groupId>org.springframework.boot</groupId> -->
-<!--     	<artifactId>spring-boot-starter-jetty</artifactId> -->
-<!--     	<version>${spring.boot.version}</version> -->
-<!--     </dependency> -->
+    <dependency>
+    	<groupId>org.springframework.boot</groupId>
+    	<artifactId>spring-boot-starter-jetty</artifactId>
+    	<version>${spring.boot.version}</version>
+    </dependency>
+<!-- 	<dependency> -->
+<!-- 	    <groupId>org.springframework.boot</groupId> -->
+<!-- 	    <artifactId>spring-boot-starter-undertow</artifactId> -->
+<!-- 	    <version>2.0.3.RELEASE</version> -->
+<!-- 	</dependency> -->
+
     <dependency>
 	    <groupId>org.xerial</groupId>
 	    <artifactId>sqlite-jdbc</artifactId>
@@ -51,25 +57,6 @@
     	<groupId>junit</groupId>
     	<artifactId>junit</artifactId>
     	<version>4.12</version>
-    </dependency>
-    <dependency>
-    	<groupId>org.mybatis.spring.boot</groupId>
-    	<artifactId>mybatis-spring-boot-starter</artifactId>
-    	<version>1.3.2</version>
-    	<exclusions>
-    		<exclusion>
-    			<artifactId>spring-boot-starter</artifactId>
-    			<groupId>org.springframework.boot</groupId>
-    		</exclusion>
-    		<exclusion>
-    			<artifactId>spring-boot-starter-jdbc</artifactId>
-    			<groupId>org.springframework.boot</groupId>
-    		</exclusion>
-    		<exclusion>
-    			<artifactId>spring-boot-autoconfigure</artifactId>
-    			<groupId>org.springframework.boot</groupId>
-    		</exclusion>
-    	</exclusions>
     </dependency>
     <dependency>
     	<groupId>org.springframework.boot</groupId>
@@ -97,6 +84,36 @@
 		<artifactId>fastjson</artifactId>
 		<version>1.1.37</version>
 	</dependency>
+	<dependency>
+		<groupId>org.mybatis.spring.boot</groupId>
+		<artifactId>mybatis-spring-boot-starter</artifactId>
+		<version>1.3.2</version>
+	</dependency>
+	<dependency>
+		<groupId>com.songlin</groupId>
+		<artifactId>sqlite-dialert</artifactId>
+		<version>1.0.0</version>
+	</dependency>
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-data-jpa</artifactId>
+		<version>2.0.3.RELEASE</version>
+	</dependency>
+	<dependency>
+		<groupId>commons-fileupload</groupId>
+		<artifactId>commons-fileupload</artifactId>
+		<version>1.3.1</version>
+	</dependency>
+	<dependency>
+		<groupId>mysql</groupId>
+		<artifactId>mysql-connector-java</artifactId>
+		<version>5.1.6</version>
+	</dependency>
+	<dependency>
+		<groupId>oracle</groupId>
+		<artifactId>OracleDriver</artifactId>
+		<version>5</version>
+	</dependency>
   </dependencies>
 
   <build>
@@ -106,7 +123,6 @@
           <artifactId>maven-clean-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
-        <!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
         <plugin>
           <artifactId>maven-resources-plugin</artifactId>
           <version>3.0.2</version>
@@ -132,6 +148,7 @@
           <version>2.8.2</version>
         </plugin>
         <!-- 打包命令： mvn clean package appassembler:assemble -DskipTests -->
+        <!-- 直接启动 java -Djava.ext.dirs=lib dat.App -->
         <plugin>
 		    <groupId>org.codehaus.mojo</groupId>
 		    <artifactId>appassembler-maven-plugin</artifactId>
